[tool.poetry]
name = "pulp3"
version = "3.14.4"
description = "Pulp3 Server"
authors = ["Subaru <xiafan@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pulpcore = "^3.14.4"
pulp-deb = "^2.14.1"
pulp-rpm = "^3.14.1"
pulp-container = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
